feat: Streaming chat with thinking display and multi-model support
Chat UI Enhancements:
- Add streaming API endpoint /api/rag/stream with SSE support
- Real-time thinking display like ChatGPT o1 and Claude
- Collapsible thinking section after response complete
- Toggle button for enabling or disabling thinking mode
- Use TPC logo for AI profile picture
- Markdown rendering with proper dark theme styling

Multi-Model Thinking Support:
- Built-in thinking for gpt-oss, deepseek-r1, qwq models
- Auto-parse think, thinking, reasoning tags from response
- Custom thinking for qwen, mistral via two-step prompt

Prompt Improvements:
- Remove strict format requirements
- Allow natural AI responses
- Dynamic token output 8192 max ceiling

Conversational AI:
- AI-powered greetings instead of hardcoded responses
- Skip RAG for casual chat messages

Navigation:
- Add Chat link to Documents and Upload pages
- Update branding from TPC Ingestion to TPC AI
- Clickable logo redirects to chat page

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (keep env.example, ignore actual .env)
-.env
+#env
 .env.local
 .env.development.local
 .env.test.local
