--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pdf-parse": "^1.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.5"
   },
