feat: Liquid Glass UI, DeepSeek Integration, Table Support

--- a/env.example
+++ b/env.example
@@ -37,3 +37,22 @@ OLLAMA_BASE_URL="http://localhost:11434"
 # LLM model for RAG answers
 # Recommended: qwen2.5:7b-instruct, llama3.1:8b-instruct, mistral:7b-instruct
 OLLAMA_MODEL="qwen2.5:7b-instruct"
+
+# ============== Alibaba ModelStudio (Qwen) Configuration ==============
+# Used for cloud AI chat and parsing tables from PDF
+# Get API key from: https://dashscope.console.aliyun.com/ (International)
+# or https://bailian.console.aliyun.com/ (China)
+
+# Qwen API Key
+QWEN_API_KEY=""
+
+# Base URL (use -intl for international/Singapore region)
+QWEN_BASE_URL="https://dashscope-intl.aliyuncs.com/compatible-mode/v1"
+
+# Available models for chat:
+# - qwen-plus: Fast general purpose
+# - qwen-max: Most powerful
+# - qwq-plus: Reasoning/thinking model
+QWEN_MODEL="qwen-plus"
+QWEN_THINKING_MODEL="qwq-plus"
+QWEN_MAX_MODEL="qwen-max"
