--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "bullmq": "^5.66.4",
     "cheerio": "^1.1.2",
     "ioredis": "^5.9.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "pdf-parse": "^1.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^13.0.0",
     "zod": "^4.3.5"
   },
